feat: migrate to new SDK version